# RP2040-MQTT-Controller

./: .gitignore  .gitmodules  README.md
Electronics/: README.md
Electronics/3D/: Assembly.wrl  RTC_Module.step  RTC_Module.wrl
Electronics/Controller/: Controller.kicad_pcb  Controller.kicad_prl  Controller.kicad_pro  Controller.kicad_sch  Ethernet.kicad_sch  Pico.kicad_sch  Pwr+IO.kicad_sch  README.md  _autosave-RTC.kicad_sch
Electronics/Controller/production/Controller_2023-09-16_19-25-32/: netlist.ipc  positions.csv
Electronics/Controller/production/Controller_2023-09-16_20-57-42/: bom.csv  designators.csv  netlist.ipc  positions.csv
Electronics/Pico-MQTT-Controller/: Ethernet.kicad_sch  Pico-MQTT-Controller.kicad_pcb  Pico-MQTT-Controller.kicad_prl  Pico-MQTT-Controller.kicad_pro  Pico-MQTT-Controller.kicad_sch  Pico.kicad_sch  Pwr+IO.kicad_sch
Electronics/RTC_Module/: RTC_Module.kicad_pcb  RTC_Module.kicad_prl  RTC_Module.kicad_pro  RTC_Module.kicad_sch  RTC_Module_AR-Check.txt
Electronics/RTC_Module/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
Software/: CMakeLists.txt  RP2040_MQTT_Board.cmake  RP2040_MQTT_Board.h  main.c
Software/libraries/: CMakeLists.txt
Software/port/: CMakeLists.txt
Software/port/DS3234_Driver/: DS3234_Driver.c  DS3234_Driver.h
Software/port/FreeRTOS-Kernel/inc/: FreeRTOSConfig.h
Software/port/mbedtls/inc/: ssl_config.h
